<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:locale="en"
    tools:ignore="MissingTranslation">

    <string name="app_name" translatable="false">Snapshare</string>
    <string name="xposed_description">Send any image and video via Snapchat right from the share menu.</string>
    <string name="snapshare_settings">Snapshare Settings</string>
    <string name="developer_settings">Developer Settings</string>

    <!-- Dialogs -->
    <string name="module_not_enabled">Snapshare is not enabled. Please enable it in Xposed Installer and reboot your device.</string>
    <string name="size_error">"The video you shared is too large (%1$s), it probably won't send. Snapshat only supports files up to %2$s."</string>
    <string name="unable_open_xposed">Unable to open Xposed Installer, is it installed?</string>

    <string name="open_xposed_installer">Open Xposed Installer</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="go_back">Go back</string>
    <string name="close">Close</string>

    <!-- Media settings -->
    <string name="pref_media">Media</string>

    <string name="pref_rotation_title">Rotation mode</string>
    <string name="pref_rotation_default" translatable="false">90</string>
    <string-array name="pref_rotation_entries">
        <item>Don\'t rotate</item>
        <item>Clockwise (90°)</item>
        <item>Counterclockwise (-90°)</item>
    </string-array>
    <string-array name="pref_rotation_values" translatable="false">
        <item>0</item>
        <item>90</item>
        <item>270</item>
    </string-array>

    <string name="pref_adjustment_title">Image adjustment method</string>
    <string name="pref_adjustment_default" translatable="false">0</string>
    <string-array name="pref_adjustment_entries">
        <item>Crop</item>
        <item>Scale</item>
        <item>None</item>
    </string-array>
    <string-array name="pref_adjustment_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Caption settings -->
    <string name="pref_caption">Captions</string>
    <string name="pref_caption_explanation">Note: unlimited captions works for BOTH snaps taken with Snapchat\'s camera and snaps shared with Snapshare, so it\'s NOT limited to shared snaps.</string>

    <string name="pref_caption_unlimited_vanilla_title">Unlimited regular captions</string>
    <string name="pref_caption_unlimited_vanilla_on">Regular captions are unlimited</string>
    <string name="pref_caption_unlimited_vanilla_off">Regular captions are only one line</string>

    <string name="pref_caption_unlimited_fat_title">Unlimited fat captions</string>
    <string name="pref_caption_unlimited_fat_on">Fat captions are unlimited</string>
    <string name="pref_caption_unlimited_fat_off">Fat captions are 33 characters maximum</string>

    <!-- Other settings -->
    <string name="pref_other">Other</string>

    <string name="pref_launcher_title">Show launcher icon</string>
    <string name="pref_launcher_on">Access settings through my launcher</string>
    <string name="pref_launcher_off">Access settings through Xposed Installer</string>

    <string name="pref_debug_title">Debugging</string>
    <string name="pref_debug_on">Debug information is shown in the Xposed Log</string>
    <string name="pref_debug_off">Debug information is not shown in the Xposed Log</string>

    <!-- About section -->
    <string name="pref_about">About</string>
    <string name="pref_about_title" translatable="false">Snapshare v%1$s</string>
    <string name="pref_about_summary">Snapshare is released under the GPLv3 license.</string>

    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_summary">Support me, buy me a beer using PayPal. Donations are highly appreciated.</string>

    <string name="pref_support_title">Support</string>
    <string name="pref_support_summary">Navigate to the XDA-thread, please read the OP first if you\'re facing problems.</string>

    <!-- Developer settings -->
    <string name="pref_miscellaneous">Miscellaneous</string>

    <string name="pref_size_title">Disable video size check</string>
    <string name="pref_size_on">Don\'t check size when sharing a video</string>
    <string name="pref_size_off">Check size when sharing a video</string>

    <string name="pref_timber_title">Enable Timber</string>
    <string name="pref_timber_on">Snapshare\'s internal debugging class is enabled</string>
    <string name="pref_timber_off">Snapshare\'s internal debugging class is disabled</string>
</resources>
