<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_media">
        <ListPreference
            android:defaultValue="@string/pref_rotation_default"
            android:dialogTitle="@string/pref_rotation_title"
            android:entries="@array/pref_rotation_entries"
            android:entryValues="@array/pref_rotation_values"
            android:key="pref_rotation"
            android:title="@string/pref_rotation_title" />

        <ListPreference
            android:defaultValue="@string/pref_adjustment_default"
            android:dialogTitle="@string/pref_adjustment_title"
            android:entries="@array/pref_adjustment_entries"
            android:entryValues="@array/pref_adjustment_values"
            android:key="pref_adjustment"
            android:title="@string/pref_adjustment_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_other">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_launcher"
            android:summaryOff="@string/pref_launcher_off"
            android:summaryOn="@string/pref_launcher_on"
            android:title="@string/pref_launcher_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_debug"
            android:summaryOff="@string/pref_debug_off"
            android:summaryOn="@string/pref_debug_on"
            android:title="@string/pref_debug_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about">
        <Preference
            android:key="pref_about"
            android:title="@string/app_name"
            android:summary="@string/pref_about_summary" />

        <Preference
            android:key="pref_donate"
            android:title="@string/pref_donate_title"
            android:summary="@string/pref_donate_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=ATAND4ZD4HZ62"/>
         </Preference>

        <Preference
            android:key="pref_support"
            android:title="@string/pref_support_title"
            android:summary="@string/pref_support_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://forum.xda-developers.com/xposed/modules/mod-snapshare-share-images-videos-t2815786"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>